# gestureIK

./: .gitignore  CMakeLists.txt  GestGlbls.h  GestIKParams.cpp  GestIKParams.h  GestIKParser.cpp  GestIKParser.h  IKSolver.cpp  IKSolver.h  Main.cpp  MyGestLetter.cpp  MyGestLetter.h  MyGestSymbol.cpp  MyGestSymbol.h  MyGestTraj.cpp  MyGestTraj.h  MyGuiHandler.cpp  MyGuiHandler.h  MyWindow.cpp  MyWindow.h  README.md  circleTraj.csv  dflt_gestik_mrkrlocs.xml  dflt_gestik_params.xml  fullbody1.skel  fullbody1_squareHead.skel  jtVidLtrSrc_gestik_params.xml  omniLtrSrc_gestik_params.xml
csvs/: circleTraj.csv  squareTraj.csv  starTraj.csv  triangleTraj.csv
jtVideoLetters/ltr_a/: ltr_a.xml  ltr_a_cpy_0_trj_0.csv  ltr_a_cpy_1_trj_0.csv  ltr_a_cpy_2_trj_0.csv  ltr_a_cpy_3_trj_0.csv  ltr_a_cpy_4_trj_0.csv  ltr_a_cpy_5_trj_0.csv
jtVideoLetters/ltr_b/: ltr_b.xml  ltr_b_cpy_0_trj_0.csv  ltr_b_cpy_1_trj_0.csv  ltr_b_cpy_2_trj_0.csv  ltr_b_cpy_3_trj_0.csv  ltr_b_cpy_4_trj_0.csv  ltr_b_cpy_5_trj_0.csv
jtVideoLetters/ltr_c/: ltr_c.xml  ltr_c_cpy_0_trj_0.csv  ltr_c_cpy_1_trj_0.csv  ltr_c_cpy_2_trj_0.csv  ltr_c_cpy_3_trj_0.csv  ltr_c_cpy_4_trj_0.csv  ltr_c_cpy_5_trj_0.csv
jtVideoLetters/ltr_d/: ltr_d.xml  ltr_d_cpy_0_trj_0.csv  ltr_d_cpy_1_trj_0.csv  ltr_d_cpy_2_trj_0.csv  ltr_d_cpy_3_trj_0.csv  ltr_d_cpy_4_trj_0.csv  ltr_d_cpy_5_trj_0.csv
jtVideoLetters/ltr_e/: ltr_e.xml  ltr_e_cpy_0_trj_0.csv  ltr_e_cpy_1_trj_0.csv  ltr_e_cpy_2_trj_0.csv  ltr_e_cpy_3_trj_0.csv  ltr_e_cpy_4_trj_0.csv  ltr_e_cpy_5_trj_0.csv
jtVideoLetters/ltr_f/: ltr_f.xml  ltr_f_cpy_0_trj_0.csv  (+5 more)
(+1068 files in other folders)
